add source dir and test source dir to pom

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
 			<plugins>
